Mobile layout bug fix and refinement.

--- a/html/style_gui.css
+++ b/html/style_gui.css
@@ -164,11 +164,16 @@ button.pressable[aria-pressed="true"] {
    opacity: 1;
 }
 
+input[placeholder] {
+   width: 180px;
+}
+
 input[placeholder=Group] ,
 input[placeholder=Level] ,
 input[placeholder=Power\ Source] ,
 input[placeholder=Rarity] ,
 input[placeholder=Size] {
+   min-width: 80px;
    width: 80px;
 }
 
@@ -181,9 +186,15 @@ input[placeholder=Frequency] ,
 input[placeholder=Price] ,
 input[placeholder=Role] ,
 input[placeholder=Tier] {
+   min-width: 120px;
    width: 120px;
 }
 
 input[placeholder=Type] {
+   min-width: 140px;
    width: 140px;
+}
+
+input[placeholder=Name] {
+   width: 240px;
 }
